various code cleans ups, still a few css headaches

--- a/templates/end.html
+++ b/templates/end.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col s12" id="your-data">
                     <p>Name: <em>{{ all_data.full_name }}</em></p>
-                    <p>Address: <em>{{ all_data.address }}</em></p>
+                    <p>Email: <em>{{ all_data.address }}</em></p>
                     <p>Phone: <em>{{ all_data.phone }}</em></p>
                     <br>
                     <a href="{{ url_for('logout') }}" class="red waves-effect waves-light btn-large">
