--- a/templates/welcome_task.html
+++ b/templates/welcome_task.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Welcome {{ username }}</h3>
+    <h3 class="center-align">Just one more form!</h3>
     <p class="center-align" id="general-font-size">The database is almost complete, just add this last entry!</p>
     <div class="row card-panel grey lighten-5">
 
