--- a/templates/start.html
+++ b/templates/start.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div id="fullpage">
-
+        <!--  
         <div class="section center">
             <div class="center-custom">
                 <h1 id="game-title">I🐝M</h1><br>
@@ -10,12 +10,12 @@
                 <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
             </div>
         </div> 
-
-       <!--  
-        <div class="section">
+        -->
+       
+        <div class="section center">
             <div class="row">
-                <div class="col s12 center">
-                    <h1 id="game-title">I🐝M</h1><br>
+                <div class="col s12 ">
+                    <h1 id="game-title">I🐝M</h1>
                 </div>
             </div>
             <div class="row">
@@ -29,7 +29,7 @@
                 </div>
             </div>     
         </div>
-    -->
+    
         
         <div class="section center" id="2">
             <h1 id="honey-pot">🍯</h1><br>
