--- a/templates/end.html
+++ b/templates/end.html
@@ -38,8 +38,8 @@
                     the regime's generation and tabulation of punch cards for national census data, military logistics,
                     ghetto statistics, train traffic management, and concentration camp capacity. <br><br>
 
-                    IBM's involvement with the Nazis proved to be pivotal in their efforts to identify, isolate, and ultimately destroy the country's
-                    Jewish minority.
+                    IBM's active involvement was pivotal in the regime's efforts to identify, isolate,
+                    and ultimately destroy the country's Jewish minority.
                     </p>
                 </div>
 
@@ -91,26 +91,18 @@
             <div class="row">
                 <div class="col s12">
                     <p id="final-message">
-                        Thanks for your name, address and phone number btw
+                        Thanks for your name, email and phone number btw
                     </p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col s12" id="your-data">
-                    <p>Name: <em>{{ all_data.full_name }}</em></p>
-                    <p>Email: <em>{{ all_data.address }}</em></p>
-                    <p>Phone: <em>{{ all_data.phone }}</em></p>
-                    <br>
-                    <a href="{{ url_for('logout') }}" class="red waves-effect waves-light btn-large">
-                        <i class="fas fa-fire-alt"></i> Delete all '{{ username }}' data?</a>
+            <div class="row ">
+                <div class="col s12 center-custom section">
+                    <a href="/start" class="red waves-effect waves-light btn-large">
+                        <i class="fas fa-play"></i> REPLAY?</a>
                 </div>
             </div>
         </div>
-
-        
-
-            
     </div>
 
 
