--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
           }
         </style>
     {% endblock %}
-    <title>Task Manager</title>
+    <title>I Bee M</title>
 </head>
 <body>
     
