--- a/templates/start.html
+++ b/templates/start.html
@@ -93,8 +93,12 @@
                         </button>
                     </div>
                 </div>
-                
             </form>
+            <div class="row">
+                <div class="col s12 center">
+                    <a href="https://twitter.com/LiamTeaTate" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 
