--- a/templates/base_bare.html
+++ b/templates/base_bare.html
@@ -17,7 +17,7 @@
     
     {% block styles %}
     {% endblock %}
-    <title>Task Manager</title>
+    <title>I Bee M</title>
 </head>
 <body>
   <section>
