--- a/templates/end.html
+++ b/templates/end.html
@@ -1,55 +1,50 @@
-{% extends "base_bare.html" %}
-{% block content %}
+{% extends "base_bare.html" %} {% block content %}
 
-    <div id="fullpage">
-        <div class="section center">
-            <div class="row">
-                <div class="col s12">
-                    <h1 id="congrats">🍯Good Job!🍯</h1>
-                </div>
+<div id="fullpage">
+    <div class="section center">
+        <div class="row">
+            <div class="col s12">
+                <h1 id="congrats">🍯Good Job!🍯</h1>
             </div>
-
-            <div class="row">
-                <div class="col s12">
-                    <p id="congrats-subtitle">Did you do everything you were told?<br>
-                        or<br>
-                        Did you edit the data to save the bees?
-                    </p>
-                </div>
-            </div>       
-
-            <div class="row">
-                <div class="col s12">
-                    <a href="#2"><i class="fas fa-chevron-down" id="arrow1" aria-hidden="true"></i></a>
-                </div>
-            </div>   
-        
         </div>
-        
-        <div class="section center" id="2">
-            <div class="row">
-                <div class="col s12 m6" id="end2">
-                    <h3 id="quote">“Without IBM's machinery...Hitler's camps could have never managed the numbers they did."</h3>
 
-                    <p>
-                    'IBM and the Holocaust' outlines the true story of IBM's collaboration in the Nazi genocide.
-                    
-                    The 'efficiency' of the technology allowed the Nazis to perform an automated genocide, with IBM facilitating
-                    the regime's generation and tabulation of punch cards for national census data, military logistics,
-                    ghetto statistics, train traffic management, and concentration camp capacity. <br><br>
-
-                    IBM's active involvement was pivotal in the regime's efforts to identify, isolate,
-                    and ultimately destroy the country's Jewish minority.
-                    </p>
-                </div>
-
-                <div class="col s12 m6">
-                    <a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank">
-                    <img src="/static/images/IBM-book.jpg" id="book"></a>
-                    <div><a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank"
-                        class="black waves-effect waves-light btn-large">Read more </a></div>
-                </div>
+        <div class="row">
+            <div class="col s12">
+                <p id="congrats-subtitle">
+                    Did you do everything you were told?<br />
+                    or<br />
+                    Did you edit the data to save the bees?
+                </p>
             </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <a href="#2"><i class="fas fa-chevron-down" id="arrow1" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="section center" id="2">
+        <div class="row">
+            <div class="col s12 m6" id="end2">
+                <h3 id="quote">“Without IBM's machinery...Hitler's camps could have never managed the numbers they did."</h3>
+
+                <p>
+                    'IBM and the Holocaust' outlines the true story of IBM's collaboration in the Nazi genocide. The 'efficiency' of the technology allowed the Nazis to perform an automated genocide, with IBM facilitating the regime's
+                    generation and tabulation of punch cards for national census data, military logistics, ghetto statistics, train traffic management, and concentration camp capacity. <br />
+                    <br />
+
+                    IBM's active involvement was pivotal in the regime's efforts to identify, isolate, and ultimately destroy the country's Jewish minority.
+                </p>
+            </div>
+
+            <div class="col s12 m6">
+                <a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank"> <img src="/static/images/IBM-book.jpg" id="book" /></a>
+
+                <div><a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank" class="black waves-effect waves-light btn-large">Read more </a></div>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col s12">
@@ -59,7 +54,6 @@
     </div>
 
     <div class="section center" id="3">
-
         <div class="row">
             <div class="col s12">
                 <h1 id="gameover">GAME OVER</h1>
@@ -74,11 +68,10 @@
             </div>
         </div>
 
-
         <div id="final-comp" class="s12">
             <div class="row">
                 <div class="col s12">
-                    <img src="/static/images/trail.png" id="trail">
+                    <img src="/static/images/trail.png" id="trail" />
                 </div>
             </div>
 
@@ -96,15 +89,13 @@
                 </div>
             </div>
 
-            <div class="row ">
+            <div class="row">
                 <div class="col s12 center-custom section">
-                    <a href="/start" class="red waves-effect waves-light btn-large">
-                        <i class="fas fa-play"></i> REPLAY?</a>
+                    <a href="/start" class="red waves-effect waves-light btn-large"> <i class="fas fa-play"></i> REPLAY?</a>
                 </div>
             </div>
         </div>
     </div>
 
-
-{% endblock %}
-    
+    {% endblock %}
+</div>
